force-app/main/default/objects/CustomDiscountRequest__c/CustomDiscountRequest__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Stores information on approval workflow for discount requests raised for hardware, service plan and ala carte applications. Used by a trigger on Discount Request object to identify different approvers needed for a particular discount request record.</description>
    <label>Discount Request</label>
</CustomObject>