force-app/main/default/objects/CustomDiscountRequest__c/fields/Amount_Percent_Limit__c.field-meta.xml
<CustomField>
    <fullName>Amount_Percent_Limit__c</fullName>
    <label>Amount/Percent Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>