force-app/main/default/objects/CustomDiscountRequest__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <description>Specifies the approver name</description>
    <label>Approver</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>