force-app/main/default/objects/CustomDiscountRequest__c/fields/Fleet_Size__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Size__c</fullName>
    <description>Specifies the fleet size for Plan or ala carte applications</description>
    <label>Fleet Size</label>
    <length>20</length>
    <type>Text</type>
</CustomField>