force-app/main/default/objects/CustomDiscountRequest__c/fields/Higher_Tier_Value__c.field-meta.xml
<CustomField>
    <fullName>Higher_Tier_Value__c</fullName>
    <description>Specifies the higher limit on opportunity quantity ordered</description>
    <label>Higher Tier Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>