force-app/main/default/objects/CustomDiscountRequest__c/fields/Lower_Tier_Value__c.field-meta.xml
<CustomField>
    <fullName>Lower_Tier_Value__c</fullName>
    <description>Specifies the lower limit on opportunity quantity ordered</description>
    <label>Lower Tier Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>