force-app/main/default/objects/CustomDiscountRequest__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <description>Specifies whether request is of Hardware, Plan or À la Carte Application type</description>
    <label>Request Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>