force-app/main/default/objects/CustomDiscountRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount_Percent_Limit__c</columns>
    <columns>Approver__c</columns>
    <columns>Fleet_Size__c</columns>
    <columns>Higher_Tier_Value__c</columns>
    <columns>Lower_Tier_Value__c</columns>
    <columns>Request_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>